[package]
name = "inverted_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2"
env_logger = "0.9.0"
indicatif = { version = "*", features = ["rayon"] }
log = "0.4"
rayon = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
